--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -5,6 +5,9 @@ module(
     version = "0.45.1",
 )
 
+bazel_dep(name = "zlib", version = "1.3")
+bazel_dep(name = "zstd", version = "1.5.5.bcr.1")
+
 bazel_dep(
     name = "bazel_features",
     version = "1.9.1",
